# ruscompile

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall-all.sh  uninstall.sh
benches/: lexer_bench.rs  parser_bench.rs
examples/: hello.rs
examples/source/: hello.src
src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  utils.rs
tests/: integration_tests.rs
