[package]
name = "ruscompile"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seu.email@exemplo.com>"]
description = "Um compilador simples escrito em Rust"
license = "MIT"

[dependencies]
# Parsing e análise léxica
logos = "0.13"
lalrpop-util = "0.20"

# Estruturas de dados
indexmap = "2.0"
dashmap = "5.5"

# Utilitários
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Para testes
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
pretty_assertions = "1.3"

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 